fix align for contact block

--- a/src/view/Components/contact-us/style.scss
+++ b/src/view/Components/contact-us/style.scss
@@ -62,6 +62,7 @@
 
             p {
                 line-height: 1.3rem;
+                text-align: center;
             }
 
             a {
